--- a/static/styles.css
+++ b/static/styles.css
@@ -1,12 +1,12 @@
 h1{
     font-size: 5.625rem;
-    font-family: 'Sacramento',cursive;
+    font-family: 'Sacramento',;
     margin: 50px auto 0 auto;
-    color: #66BFBF;
+    color: #6f2b2b;
     line-height: 2;
 }
 .top-container{
-    background-color: #E4F9F5;
+    background-color: #ecdbc9;
     position: relative;
 
 }
@@ -17,7 +17,7 @@ p{
 h2{
     font-family: 'Montserrat', sans-serif;
     font-size: 2.5rem;
-    color: #66BFBF;
+    color: #6f2b2b;
     font-weight: normal;
     padding-bottom: 0px;
 }
@@ -109,7 +109,7 @@ a:hover{
     color: #d8ebb5;
 }
 a{
-    color: #11999E;
+    color:#6f2b2b;
     font-family: 'Montserrat', sans-serif;
     /* margin: 10px 20px; */
     size:3;
